--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,10 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css"
+    />
 
     <title>Color by CLSS.hk</title>
   </head>
