--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,7 @@
       href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
     />
 
-    <title>Color by CLSS.hk</title>
+    <title>Color Playbook - Play with colors!</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
